--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   dio_http_formatter: ^1.0.2
   convex_bottom_bar: ^2.6.0
   shrink_sidemenu: ^1.0.0
+  day_night_switcher: ^0.1.1+1
 
 dev_dependencies:
   flutter_test:
